--- a/test/make_CorrectedJets_HB_HO.cfg
+++ b/test/make_CorrectedJets_HB_HO.cfg
@@ -1,4 +1,4 @@
-process PROD  = {
+process RECO  = {
 
 	source = PoolSource { 
 		untracked vstring fileNames = {'file:CaloTowers_HB_HO.root'} 
@@ -9,8 +9,10 @@ process PROD  = {
                  untracked string fileName = 'CorrectedJetsiParton_HB_HO.root'
         }
 
-        module caloTowers = CaloTowerCandidateProducer {
-            string src = "towermaker"
+        module caloTowers = CaloTowerCandidateCreator {
+            string src = "towermaker"	  
+	    double minimumEt = 0.5
+	    double minimumE = 0.8
         }
 	
         block common_jet_parameters = {
